fixed some Layout Bugs

--- a/Frontend/src/components/ContactRight.css
+++ b/Frontend/src/components/ContactRight.css
@@ -39,6 +39,7 @@
 .CR .lnkb .h2 {
   text-align: left;
   font-size: 22px;
+  font-weight: bold;
   margin: 20px 5px 5px 0;
 }
 
