--- a/Frontend/src/components/HeroSection2.css
+++ b/Frontend/src/components/HeroSection2.css
@@ -1,7 +1,7 @@
 .hero-section2 {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 225px;
   background: url('/apppic3.jpeg') center/cover no-repeat;
   display: flex;
   align-items: center;
