--- a/Frontend/src/components/Links.css
+++ b/Frontend/src/components/Links.css
@@ -1,6 +1,6 @@
 .lnk {
   color: white;
-  flex: 1 1 250px;
+  flex: 1 1 260px;
   padding-top: 50px;
   box-sizing: border-box;
 }
@@ -17,6 +17,7 @@
 .lnk h2 {
   text-align: left;
   font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .lnk h4 {
